# learning-rag

./: .gitignore  README.md  demo_app.py  pyproject.toml  requirements.txt
Notebooks/: demo_agent.ipynb  simple_llm_bot.ipynb
test_data/: data.txt
